Incresed Maven heap space #6